# icp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  demo.cpp  viewer.cpp
src/: CMakeLists.txt  icp.cpp  icp.h  kdtree.h  normals.h  pointcloud_io.cpp  pointcloud_io.h
tests/: CMakeLists.txt  test_file_icp.cpp  test_icp.cpp  test_pointcloud_io.cpp
tests/data/: source.xyz  target_translated.xyz
